--- a/src/plugin/ICAP/DropZoneBundle/Resources/config/config.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/config/config.yml
@@ -6,3 +6,6 @@ plugin:
           class: ICAP\DropZoneBundle\Entity\DropZone
           is_visible: true
           is_browsable: false
+          actions:
+            - name: edit
+              is_action_in_new_page: false
