Change css classes for bootstrap 3 integration

--- a/src/plugin/ICAP/DropZoneBundle/Resources/config/config.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/config/config.yml
@@ -9,3 +9,5 @@ plugin:
           actions:
             - name: edit
               is_action_in_new_page: false
+            - name: drops
+              is_action_in_new_page: false
