--- a/src/plugin/ICAP/DropZoneBundle/Resources/config/services/listeners.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/config/services/listeners.yml
@@ -14,3 +14,5 @@ services:
           - { name: kernel.event_listener, event: create_log_details_icap_dropzone, method: onCreateLogDetails }
           - { name: kernel.event_listener, event: plugin_options_icapdropzone, method: onAdministrate }
           - { name: kernel.event_listener, event: edit_icap_dropzone, method: onEdit }
+          - { name: kernel.event_listener, event: edit_icap_dropzone, method: onEdit }
+          - { name: kernel.event_listener, event: drops_icap_dropzone, method: onDrops }
